@@ -1,5 +1,11 @@
 2009-07-16  Corinna Vinschen  <corinna@vinschen.de>
 
+	* syscalls.cc (unlink_nt): First remove the R/O DOS attribute with
+	FILE_WRITE_ATTRIBUTES access only, then re-open the file for DELETE.
+	Explain why.
+
+2009-07-16  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Remove file
 	attribute check already done in NtSetAttributesFile.
 
